# learn

./: .gitmodules
android/hw/: .gitignore  build.gradle
android/hw/src/main/: AndroidManifest.xml
android/hw/src/main/java/com/davsm/hw/: MainActivity.java
asmjit/: CMakeLists.txt  basic_usage.cpp
coroutines/: CMakeLists.txt  basic_usage.cpp
cuda/: .gitignore  CMakeLists.txt  main.cpp  vector_add.cu
cuda/benchmark/: CMakeLists.txt  vector_add.cpp
cuda/include/: cuda_error.h  device_buffer.h  vector_add.h
cuda/src/: CMakeLists.txt  vector_add.cu
cuda/test/: CMakeLists.txt  vector_add.cpp
dsa/: .gitignore  gen_btrees_with_n_leaves  gen_btrees_with_n_leaves.cpp
elf/: CMakeLists.txt  loadelf.cpp  loadelf.h  match_cv.h  runelf.cpp
io_uring/: CMakeLists.txt  basic_fread.c
sec-boot-sim/: .gitignore  CMakeLists.txt  checksum.cpp  keygen.sh  pkey.cpp  sign.cpp  verify.cpp
sec-boot-sim/include/: checksum.h  move_only.h  pkey.h  signature.h
simd/: CMakeLists.txt  dot_product.cpp  permute.cpp  prng.h
systemd/: .gitignore  Makefile  daemon.c  double-daemon.service
task-tracker/: .clang-format  .clang-tidy  CMakeLists.txt
task-tracker/include/: platform.hpp  sqlite_helpers.hpp  task_tracker.hpp
task-tracker/share/: init_db.sql
task-tracker/src/: CMakeLists.txt  main.cpp  platform.cpp  sqlite_helpers.cpp  task_tracker.cpp
webgl/: index.html  main.js
